--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,10 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
