--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "firebase": "^11.6.0",
     "formik": "^2.4.6",
     "jspdf": "^3.0.1",
+    "papaparse": "^5.5.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
