--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,8 @@
     "jspdf": "^3.0.1",
     "papaparse": "^5.5.3",
     "qrcode.react": "^4.2.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
